--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx mocha tests/tests.js",
     "start": "nodemon app.js"
   },
   "keywords": [],
@@ -17,7 +17,11 @@
     "sequelize": "^6.33.0"
   },
   "devDependencies": {
-    "mysql2": "^3.6.1"
+    "chai": "^4.3.8",
+    "chai-http": "^4.4.0",
+    "mocha": "^10.2.0",
+    "mysql2": "^3.6.1",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=16.14"
